<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">
    <TextView
        android:fontFamily="sans-serif-black"
        android:id="@+id/title"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:textSize="30sp"
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_below="@id/title"
        android:id="@+id/top"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="18sp"
            android:fontFamily="sans-serif-medium"
            android:id="@+id/question_num_one"
            android:text="@string/_1_questions_list"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioGroup
                android:id="@+id/question_one_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="UselessParent">
                <RadioButton
                    android:id="@+id/radio_q1_a"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:text="@string/true_answer"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/radio_q1_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/false_answer" />
                <RadioButton
                    android:id="@+id/radio_q1_c"
                    android:layout_width="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/i_am_not_sure"
                    android:layout_height="wrap_content" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/top"
        android:id="@+id/middle"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:id="@+id/question_num_two"
            android:text="@string/_2_questions_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioGroup
                android:id="@+id/question_two_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/radio_q2_a"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:text="@string/true_answer"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/radio_q2_b"
                    android:text="@string/false_answer"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/radio_q2_c"
                    android:text="@string/i_am_not_sure"
                    android:layout_width="wrap_content"
                    android:textSize="18sp"
                    android:layout_height="wrap_content" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:id="@+id/bottom"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatButton
            android:onClick="resetSolution"
            android:text="@string/btn_reset"
            android:layout_marginEnd="3dp"
            android:layout_width="0dp"
            android:textColor="@color/white"
            android:background="@drawable/submit_btn_bg"
            android:backgroundTint="@color/design_default_color_primary"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <androidx.appcompat.widget.AppCompatButton
            android:onClick="submitSolution"
            android:text="@string/submit"
            android:layout_marginStart="3dp"
            android:layout_width="0dp"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:background="@drawable/submit_btn_bg"
            android:layout_weight="1" />
    </LinearLayout>
</RelativeLayout>